# memes-api-test

./: .gitignore  Dockerfile  README.MD  conftest.py  docker-compose.yml  environments.py  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: clear_allure_history.yml  config.yml  run_tests.yml
api_client/: base_api.py  base_endpoints.py  base_models.py  base_payloads.py
api_client/memes/: memes_api.py  memes_endpoints.py  payloads.py
api_client/memes_api/: memes_api.py  memes_endpoints.py  memes_payloads.py  payloads.py
assertions/: base_assertions.py  memes_assertions.py
config/: base_test.py  headers.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1041d4bf2a133d17.json  104a5673d8122f9d.json  10bdf6353636b921.json  10c051d789b181f9.json  112192d4f5297feb.json  11f5746e82dbd44d.json  12010990168bca7d.json  1209599c0eb73ece.json  12188312d6007504.json  128ce0340a9e3c90.json  1340768261ed3aaa.json  1376bfb15945ae82.json  139de79f483bec27.json  144d669f3e6285d2.json  14bde80069de6599.json  14c1f70137fd2d8.json  151c35265b1d80c6.json  (+862 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: test_memes.py  test_memes_api.py  test_memes_endpoints.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+1147 files in other folders)
