[project]
name = "memes-api-test"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksMishin",email = "shmurge3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pytest>=9.0.3,<10.0.0",
    "allure-pytest>=2.15.3,<3.0.0",
    "faker>=39.0.0,<40.0.0",
    "pytest-rerunfailures>=16.1,<17.0",
    "pydantic>=2.12.5,<3.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "requests>=2.32.5,<3.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
